syntax="proto3";
package peer;

option java_package="com.proto.peer";
option java_multiple_files=true;

message SetTokenRequest{
  bool token=1;
}
